# quiz-bot

./: .env.swp  composer.json
app/Helpers/: Telegram.php
app/Imports/: ImportExcel.php  QuestionImport.php
app/Models/: BaseModel.php  Category.php  Level.php  Question.php  QuestionHistory.php  QuestionOption.php  SubCategory.php  TelegramUser.php  TelegramUserNotification.php  TelegramUserQuestionResult.php  Transaction.php  User.php
app/Notifications/: TelegramNotificationChannel.php  TelegramUserNotification.php  TransactionApproved.php  TransactionApprovedNotification.php  TransactionRejectedNotification.php
app/Providers/: AppServiceProvider.php  TelegramBotServiceProvider.php  TelescopeServiceProvider.php
bootstrap/: app.php  providers.php
config/: filesystems.php  telegram.php  telescope.php
core/: Cargo.toml
core/src/: main.rs
core/src/config/: app.rs
core/src/model/: database.rs  mod.rs
database/migrations/: 0001_01_01_000000_create_users_table.php  2024_08_16_121406_create_telegram_users_table.php  2024_08_16_181103_create_categories_table.php  2024_08_16_181311_create_sub_categories_table.php  2024_08_16_181433_create_levels_table.php  2024_08_16_181727_create_questions_table.php  2024_08_16_182640_create_question_options_table.php  2024_09_07_130342_create_transactions_table.php  2024_09_12_201151_create_telegram_user_notifications_table.php  (+2 more)
install/: install.ssh  nginx.example  permissions.sh
routes/: api.php  console.php  web.php
storage/: 5-sinf.xlsx  8-sinf.xlsx  last.xlsx  questions.xlsx  test_quiz.xlsx
(+56 files in other folders)
